tests/programs/type-errors/impl_prim_method.rice
interface Bar {
  fn bloop(Self, int) -> int;
}

fn main() { 
  (1).bloop(0); ()
}